{
  "version": 4,
  "terraform_version": "1.1.6",
  "serial": 60,
  "lineage": "528a6f2f-df3e-968f-0b87-55a9d0154592",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eng103a_yacob_tf_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:internet-gateway/igw-0586c5fb7a976a94a",
            "id": "igw-0586c5fb7a976a94a",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng103a_yacob_tf_igw"
            },
            "tags_all": {
              "Name": "eng103a_yacob_tf_igw"
            },
            "vpc_id": "vpc-0bbb458209ab89fbc"
          },
          "dependencies": [
            "aws_vpc.eng103_yacob_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eng103a_yacob_tf_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:route-table/rtb-0e5cd2d2beef04517",
            "id": "rtb-0e5cd2d2beef04517",
            "owner_id": "135928476890",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0586c5fb7a976a94a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "eng103a_yacob_tf_rt"
            },
            "tags_all": {
              "Name": "eng103a_yacob_tf_rt"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbb458209ab89fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.eng103a_yacob_tf_igw",
            "aws_vpc.eng103_yacob_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "eng103a_yacob_tf_subnet_association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b419c7333cb94272",
            "route_table_id": "rtb-0e5cd2d2beef04517",
            "subnet_id": "subnet-08283d6ac22034598"
          },
          "dependencies": [
            "aws_internet_gateway.eng103a_yacob_tf_igw",
            "aws_route_table.eng103a_yacob_tf_rt",
            "aws_subnet.eng103_yacob_tf_vpc_publicSN",
            "aws_vpc.eng103_yacob_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "yacob_sg_app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:security-group/sg-0c254da9b24dfb05a",
            "description": "Allow inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c254da9b24dfb05a",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3000,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3000
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "access to the app",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "ssh access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "eng103a_yacob_tf_sg_app",
            "name_prefix": "",
            "owner_id": "135928476890",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eng103a_yacob_tf_sg_app"
            },
            "tags_all": {
              "Name": "eng103a_yacob_tf_sg_app"
            },
            "timeouts": null,
            "vpc_id": "vpc-0bbb458209ab89fbc"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eng103_yacob_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "eng103_yacob_tf_vpc_publicSN",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:subnet/subnet-08283d6ac22034598",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-west-1a",
            "availability_zone_id": "euw1-az3",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-08283d6ac22034598",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "135928476890",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "eng103_yacob_tf_vpc_publicSN"
            },
            "tags_all": {
              "Name": "eng103_yacob_tf_vpc_publicSN"
            },
            "vpc_id": "vpc-0bbb458209ab89fbc"
          },
          "dependencies": [
            "aws_vpc.eng103_yacob_tf_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eng103_yacob_tf_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-west-1:135928476890:vpc/vpc-0bbb458209ab89fbc",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-02d37565848903caa",
            "default_route_table_id": "rtb-011ace870a29b9966",
            "default_security_group_id": "sg-0a699d9f1f9aaf7ac",
            "dhcp_options_id": "dopt-18d5d77d",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0bbb458209ab89fbc",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-011ace870a29b9966",
            "owner_id": "135928476890",
            "tags": {
              "Name": "eng103a_yacob_vpc_tf"
            },
            "tags_all": {
              "Name": "eng103a_yacob_vpc_tf"
            }
          }
        }
      ]
    }
  ]
}